2003-11-17  Rodrigo Moya <rodrigo@ximian.com>

	* gui/calendar-component.c (delete_calendar_cb, rename_calendar_cb):
	* gui/tasks-component.c (delete_task_list_cb, rename_task_list_cb):
	peek the primary selection.

2003-11-17  Rodrigo Moya <rodrigo@ximian.com>

	* gui/tasks-component.c (fill_popup_menu_cb): added 'Delete' and
	'Rename' menu items.
	(delete_task_list_cb, rename_task_list_cb): callbacks for new
	menu items.

2003-11-17  Rodrigo Moya <rodrigo@ximian.com>

	* gui/calendar-component.c (add_popup_menu_item): try first to
	create the icon from the stock, and then from a file.
	(fill_popup_menu_cb): set callback for 'Rename' menu item.
	(rename_calendar_cb): callback for 'Rename' menu item.
	(new_calendar_cb): fixed arguments.

	* gui/tasks-component.c (impl_createControls): connect to
	"fill_popup_menu" signal on the source selector.
	(fill_popup_menu_cb): callback to create our menu items.

2003-11-17  Rodrigo Moya <rodrigo@ximian.com>

	* idl/evolution-calendar.idl: remove the AlarmNotify service, no
	more need for it, since the alarm daemon will listen for changes
	on the GConf key.

	* gui/gnome-cal.c (add_alarms): removed function to talk to the
	alarm daemon.
	(client_cal_opened_cb): don't call add_alarms().

	* gui/alarm-notify/alarm-notify.[ch]: made it a basic GObject.
	(AlarmNotify_addCalendar, AlarmNotify_removeCalendar): removed
	AlarmNotify interface implementation.
	(alarm_notify_class_init): no epv to initialize.
	(alarm_notify_remove_calendar): new function, copied from the
	CORBA method implementation.
	(alarm_notify_factory_fn): return NULL, since there is no objects
	that can be created via this factory now.

	* gui/alarm-notify/notify-main.c (main): now the factory is the alarm
	notification service itself.
	(load_calendars): no need to use exceptions here.

	* gui/alarm-notify/GNOME_Evolution_Calendar_AlarmNotify.server.in.in:
	now the factory is the alarm notification service itself.
