@@ -1,12 +1,0 @@
-* gui/alarm-notify/alarm-notify-dialog.c:
-	replace missing gnome_win_hints_* calls.
-* gui/dialogs/comp-editor-util.c
-	there's a comment in comp_editor_create_contacts_component about OAF being broken.
-	Check if it's true with BonoboActivation.
-* pcs/cal-backend-file.c
-	remove usage of BonoboConf
-* */*
-	remove the G_OBJECT macro in the calls to g_object_ref/_unref, since those functions
-	already do the type checking, and it's a heavy operation.
-* */*
-	replace the signal handlers for "destroy" with weak references.
