@@ -339,7 +339,7 @@ task_editor_send_comp (CompEditor *editor, ECalComponentItipMethod method)
 		
 		client = e_meeting_store_get_e_cal (priv->model);
 		result = itip_send_comp (E_CAL_COMPONENT_METHOD_CANCEL, comp, client, NULL);
-		g_object_unref((comp));
+		g_object_unref (comp);
 
 		if (!result)
 			return FALSE;
